port 1.18.2 to Fences 1.2.0